cluster/apps/default/shhh/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shhh
  name: shhh
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shhh
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: shhh
    spec:
      containers:
        - name: shhh
          image: yoyostile/shhh
          imagePullPolicy: Always
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
