cluster/apps/default/shhh/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shhh
  namespace: default
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: shhh
